数据结构与set

--- a/DataStructure/数据结构/树/二分搜索树.md
+++ b/DataStructure/数据结构/树/二分搜索树.md
@@ -342,6 +342,10 @@ public class BST<T extends Comparable<T>> {
         node.left = node.right = null;
         return successor;
     }
+    
+    public int size(){
+        return size;
+    }
 }
 ```
 
