--- a/DataStructure/算法/查找算法/插值查找.md
+++ b/DataStructure/算法/查找算法/插值查找.md
@@ -1,6 +1,143 @@
 #  插值查找
 
-　　插值查找
+## 插值查找的基本思想
+
+　　二分查找是折半查找，而不是折四分之一或者折更多。
+
+　　在字典里面查 “apple”，肯定是有目的的往前翻，而查找 “zoo”，那肯定是往后翻，绝对不会从中间开始查起。
+
+　　同样的，比如要在取值范围 1~10000 之间 100 个元素从小打到均匀分布的数组中查找 5，自然会考虑从数组下标较小的开始查找。
+
+　　经过以上分析，折半查找这种查找方式，不是自适应的。二分查找中查找点计算如下：
+
+　　mid = (low+high)/2，即 mid = low + 1/2*(high-low)。
+
+　　通过类比，可以将查找的点改进为如下：
+
+　　mid = low + (key-a[low])/(a[high]-a[low])*(high-low)。
+
+　　也就是将上述的比例参数 1/2 改进为自适应的，根据关键字在整个有序表中所处的位置，让 mid 值的变化更靠近关键字 key，这样也就间接地减少了比较次数。
+
+　　基本思想：基于二分查找算法，将查找点地选择改进为自适应选择，可以提高查找效率。当然，插值查找也属于有序查找。
+
+　　注：对于表长较大，而关键字分布又比较均匀地查找表来说，插值查找算法地平均性能比折半查找要好的多。反之，数组中如果分布非常不均匀，那么插值查找未必是很合适地选择。
+
+## 插值查找的时间复杂度
+
+　　查找成功或者失败的时间复杂度均为 O(log2(log2n))。
+
+## 插值查找的代码
+
+　　与二分查找基本一样，就 mid 的计算方式不一样。
+
+　　mid = begin + (key-a[begin])/a[end]-a[begin]*(end-begin)。
+
+```java
+/**
+ * 插值查找
+ */
+public class InsertionSearch {
+
+
+    /**
+     * 用插值查找查找在 nums 数组中查找 key 的 index
+     * 先用快排对数组进行排序，然后设定 begin = 0,end = length-1
+     * mid = begin+(key-nums[begin])/(nums[end]-nums[begin])*(end-begin)，查找 mid 的值与 key 的大小
+     * 如果相同，返回 index
+     * 如果 mid < key，那么 begin = mid+1，如果 mid > key，那么 end = mid-1
+     * 然后循环，直到 end < begin，返回 -1
+     *
+     * @param nums
+     * @param key
+     * @return 返回 key 在 nums 数组中的下标，没有数组中没有这个 key，返回 -1
+     */
+    public static int insertionSearch(int[] nums, int key) {
+        int length = nums.length;
+        Arrays.sort(nums);
+        // begin  = 0,end = length-1
+        int begin = 0;
+        int end = length - 1;
+        // 循环，直到 end<begin，返回 -1
+        while (begin <= end) {
+            int mid = begin + (key - nums[begin]) / (nums[end] - nums[begin]) * (end - begin);
+            int now = nums[mid];
+            if (now == key) {
+                // 如果相同，返回 index
+                return mid;
+            }
+            if (now < key) {
+                // 如果 mid < key，那么 begin = mid+1
+                begin = mid + 1;
+            }
+            if (now > key) {
+                // 如果 mid > key，那么 end = mid-1
+                end = mid - 1;
+            }
+        }
+        return -1;
+    }
+}
+```
+
+　　测试：
+
+```java
+/**
+ * 查找测试
+ */
+public class SearchTest {
+    public static void main(String[] args) {
+        int[][] testTable = new int[][]{
+                createRandomIntArray(-100, 100, 50),
+                createRandomIntArray(-100, 100, 400),
+                createRandomIntArray(-1000, 1000, 500)
+        };
+        int[] testKey = createRandomIntArray(-100, 100, 10);
+        for (int[] ito : testTable) {
+            for (int key : testKey) {
+                test(ito, key);
+            }
+        }
+    }
+
+    private static void test(int[] ito, int key) {
+        int rtn;
+        for (int i = 0; i < ito.length; i++) {
+            System.out.println(ito[i] + "");
+        }
+        System.out.println();
+        System.out.println("length=" + ito.length);
+        // 开始时打印数组
+        long begin = System.currentTimeMillis();
+//        rtn = SequenceSearch.sequenceSearch(ito, key);// 顺序查找
+        rtn = InsertionSearch.insertionSearch(ito, key);// 插值查找
+        long end = System.currentTimeMillis();
+        System.out.println("查找：" + key + "，结果为：" + rtn);
+        System.out.println();
+        System.out.println("耗时：" + (end - begin) + "ms");
+        System.out.println("---------------------");
+        System.out.println("---------------------");
+    }
+
+    public static int[] createRandomIntArray(int min, int max, int length) {
+        int[] result = new int[length];
+        for (int i = 0; i < length; i++) {
+            double rand = Math.random();
+            result[i] = (int) (min + (max - min) * rand);
+        }
+        return result;
+    }
+}
+```
+
+　　输出：
+
+```java
+length=500
+查找：-9，结果为：262
+
+耗时：0ms
+```
 
 ## 参考文章
 
