--- a/DataStructure/数据结构/线性表链式存储.md
+++ b/DataStructure/数据结构/线性表链式存储.md
@@ -1,14 +1,14 @@
 #  线性表链式存储
 
-## 基本概念
+## 1. 基本概念
 
-　　线性表的顺序存储需要一块连续的内控空间（数组）来存储元素。
+　　线性表的顺序存储需要一块连续的内存空间（数组）来存储元素。
 
 　　链式存储是采用一组地址任意的存储单元来存放元素，也就是说存放地址的空间不用是连续的。这样可以充分利用计算机的内存空间，实现灵活的内存动态管理。
 
 　　线性表元素之间存在 “ 一对一 ” 的关系，即除了第一个和最后一个数据元素之外，其它数据元素都是首位相接的（注意循环链表也是线性结构，但是它首尾是相接的），那么链式存储的线性表里的元素也必须满足这个特性。
 
-　　由于链式存储的线性表不是按照线性的逻辑顺序来存储元素，它需要在每个元素里额外保存一个引用（用于指向下一个元素），这样就形成了 “一对一” 的关系。
+　　由于链式存储的线性表不是按照线性的逻辑顺序来存储元素，它需要在每个元素里额外保存一个引用（用于指向下一个元素），这样就形成了 “ 一对一 ” 的关系。
 
 　　如果链表元素中只保存了下一个元素的引用，称之为单向链表。相应地，如果元素中既保存了下一个元素的引用，又保存了上一个元素的引用称之为双向链表。
 
@@ -18,11 +18,11 @@
 
 ![](image/单向链表单节点.png)
 
-　　双向链表单个节点：
+　　双向链表单节点：
 
 ![](image/双向链表单个节点.png)
 
-## 单向链表
+## 2. 单向链表
 
 　　单向链表元素之间的组织形式：
 
@@ -32,7 +32,7 @@
 
 ![](image/单向链表删除节点操作.png)
 
-　　为了便于描述把上面三个节点称之为 A、B、C，要删除的节点为 B。要完成删除操作，需要维护节点引用即可：把 B 前一个节点 A 的 next 指向 C 节点，然后把要删除的 B 节点的 NEXT 置为 null。
+　　为了便于描述把上面三个节点称之为 A、B、C，要删除的节点为 B。要完成删除操作，需要维护节点引用即可：把 B 前一个节点 A 的 next 指向 C 节点，然后把要删除的 B 节点的 next 置为 null。
 
 　　如下图所示：
 
@@ -46,7 +46,11 @@
 
 　　小结：对于单向链表，在头部或者尾部添加或删除操作只需要维护一个引用，如果是在中间添加或删除操作需要维护两个引用，如果是对头部操作，需要维护下 head 节点。
 
+### 2.1. 单向链表的代码实现
+
 　　首先来看看单向链表用代码如何实现。
+
+#### 2.1.1. List 接口
 
 　　同样的实现了 List 接口：
 
@@ -110,6 +114,8 @@ public interface List<T> extends Iterable<T> {
 }
 ```
 
+#### 2.1.2. 单向链表的实现
+
 　　额外的，针对链表还增加了 addFirst、addLast、removeFirst 和 removeLast 方法。
 
 ```java
@@ -119,9 +125,9 @@ public interface List<T> extends Iterable<T> {
  */
 public class LinkedList<T> implements List<T> {
 
-    private int size;
-    private Node head;
-    private Node tail;
+    private int size; // 链表存储的数据大小
+    private Node head; // 头节点
+    private Node tail; // 尾节点
 
     @Override
     public Iterator<T> iterator() {
@@ -148,8 +154,8 @@ public class LinkedList<T> implements List<T> {
      * 用来保存每个节点数据
      */
     private class Node {
-        T element;
-        Node next;
+        T element; // 数据内容
+        Node next; // 指向下一个地址
 
         Node(T element, Node next) {
             this.element = element;
@@ -334,7 +340,7 @@ public class LinkedList<T> implements List<T> {
         return delete.element;
     }
 
-        /**
+      /**
      * 是否包含节点
      *
      * @param e
@@ -386,9 +392,9 @@ public class LinkedList<T> implements List<T> {
 }
 ```
 
-　　从上面的代码可以看出，如果根据索引来添加、删除节点，时间复杂度为 O(N)，需要遍历链表。删除链表的头元素（removeFirst）时间复杂度为 O(1)，但是对于单向链表的 removeLast 时间复杂度是 O(N)，因为单向列表只保存了下一个元素的引用，无法获取上一个元素，需要遍历才能获取被删除节点的上一个节点，这个时候就需要双向链表。
+　　从上面的代码可以看出，如果根据索引来添加、删除节点，时间复杂度为 O(N)，需要遍历链表。删除链表的头元素（removeFirst）时间复杂度为 O(1)，但是对于单向链表的 removeLast() 时间复杂度是 O(N)，因为单向列表只保存了下一个元素的引用，无法获取上一个元素，需要遍历才能获取被删除节点的上一个节点，这个时候就需要双向链表。
 
-## 双向链表
+## 3. 双向链表
 
 　　双向链表组织形式：
 
@@ -408,7 +414,9 @@ public class LinkedList<T> implements List<T> {
 
 　　双向链表删除最后一个节点（removeLast），不用像单向链表用遍历的方式获取前一个节点，它可以直接拿到上一个节点的引用。
 
-　　双向链表根据索引 index 指定位置查找、添加、删除更加高效。单向链表根据索引查找的时候，需要从头结点开始遍历，如果有 100 个节点，用户需要查找 index=99 位置得节点，需要遍历 100 次，才能找到这个节点。如果是双向链表，可以从为节点开始遍历，只需要判断 index 是否大于 size/2，也就是说如果 index 是在链表的后半部分，那就从尾节点向头结点方向遍历，如果链表有 100 节点，访问 index = 99 的节点，只需要循环一次就找到了。
+　　双向链表根据索引 index 指定位置查找、添加、删除更加高效。单向链表根据索引查找的时候，需要从头结点开始遍历，如果有 100 个节点，用户查找 index=99 位置的节点，需要遍历 100 次，才能找到这个节点。如果是双向链表，可以从为节点开始遍历，只需要判断 index 是否大于 size/2，也就是说如果 index 是在链表的后半部分，那就从尾节点向头结点方向遍历，如果链表有 100 节点，访问 index = 99 的节点，只需要循环一次就找到了。
+
+### 3.1. 双向链表查找的代码
 
 　　代码如下：
 
@@ -458,6 +466,8 @@ public class LinkedList<T> implements List<T> {
 
 　　这个要巧妙一些，在 for 循环中，不需要判断 index 和 i 是否相等，把 index 作为循环的边界值，最后一次循环就是要找的值。
 
+### 3.2. 双向链表的实现
+
 　　双向链表 DuplexLinkedList 代码：
 
 ```java
@@ -468,9 +478,9 @@ public class LinkedList<T> implements List<T> {
  */
 public class DuplexLinkedList<T> implements List<T> {
 
-    private int size;
-    private Node head;
-    private Node tail;
+    private int size; // 链表存储的大小
+    private Node head; // 头节点
+    private Node tail; // 尾节点
 
     @Override
     public Iterator<T> iterator() {
@@ -497,9 +507,9 @@ public class DuplexLinkedList<T> implements List<T> {
      * 用于保存每个节点数据
      */
     private class Node {
-        T element;
-        Node prev;
-        Node next;
+        T element; // 节点存储的内容
+        Node prev; // 上一个节点
+        Node next; // 下一个节点
 
         Node(T element, Node next, Node prev) {
             this.element = element;
@@ -653,7 +663,7 @@ public class DuplexLinkedList<T> implements List<T> {
             return false;
         }
         remove(index);
-        return false;
+        return true;
     }
 
     @Override
@@ -758,11 +768,9 @@ public class DuplexLinkedList<T> implements List<T> {
 
 　　链表在插入、删除元素比顺序存储的线性表要快，但是失去了随机访问的能力，所以在查找一个节点或者根据 “ 索引 ” 来访问某个元素要比顺序存储的线性表要慢。
 
-　　其实不管是单向链表还是双向链表，主要在脑海中形成链表的组织形式，对它们的增删改查就很简单，第一个是维护号引用，第二个是维护好头节点和尾节点。
-
 　　JDK LinkedList 底层也是用链表实现的，LinkedList 还是个双端队列（既可以当作栈使用，也可以当作队列使用）。
 
-## 参考文章
+## 4. 参考文章
 
 1. [数据结构与算法（二）线性表之链式存储和 LinkedList 实现](https://chiclaim.blog.csdn.net/article/details/80351584)
 2. [从零开始学数据结构和算法(二)线性表的链式存储结构](https://juejin.im/post/5c9449dd5188252da22508e3)
