--- a/DataStructure/算法/查找算法/插值查找.md
+++ b/DataStructure/算法/查找算法/插值查找.md
@@ -1,12 +1,12 @@
 #  插值查找
 
-## 插值查找的基本思想
+## 1. 插值查找的基本思想
 
 　　二分查找是折半查找，而不是折四分之一或者折更多。
 
-　　在字典里面查 “apple”，肯定是有目的的往前翻，而查找 “zoo”，那肯定是往后翻，绝对不会从中间开始查起。
+　　在字典里面查 “ apple ”，肯定是有目的的往前翻，而查找 “ zoo ”，那肯定是往后翻，绝对不会从中间开始查起。
 
-　　同样的，比如要在取值范围 1~10000 之间 100 个元素从小打到均匀分布的数组中查找 5，自然会考虑从数组下标较小的开始查找。
+　　同样的，比如要在取值范围 1~10000 之间 100 个元素从小到大均匀分布的数组中查找 5，自然会考虑从数组下标较小的开始查找。
 
 　　经过以上分析，折半查找这种查找方式，不是自适应的。二分查找中查找点计算如下：
 
@@ -18,27 +18,25 @@
 
 　　也就是将上述的比例参数 1/2 改进为自适应的，根据关键字在整个有序表中所处的位置，让 mid 值的变化更靠近关键字 key，这样也就间接地减少了比较次数。
 
-　　基本思想：基于二分查找算法，将查找点地选择改进为自适应选择，可以提高查找效率。当然，插值查找也属于有序查找。
+　　基本思想：基于二分查找算法，将查找点的选择改进为自适应选择，可以提高查找效率。当然，插值查找也属于有序查找。
 
-　　注：对于表长较大，而关键字分布又比较均匀地查找表来说，插值查找算法地平均性能比折半查找要好的多。反之，数组中如果分布非常不均匀，那么插值查找未必是很合适地选择。
+　　注：对于表长较大，而关键字分布又比较均匀的查找表来说，插值查找算法的平均性能比折半查找要好的多。反之，数组中如果分布非常不均匀，那么插值查找未必是很合适的选择。
 
-## 插值查找的时间复杂度
+## 2. 插值查找的时间复杂度
 
 　　查找成功或者失败的时间复杂度均为 O(log2(log2n))。
 
-## 插值查找的代码
+## 3. 插值查找的代码
 
 　　与二分查找基本一样，就 mid 的计算方式不一样。
 
-　　mid = begin + (key-a[begin])/a[end]-a[begin]*(end-begin)。
+　　mid = begin + (key-a[begin])/(a[end]-a[begin])*(end-begin)。
 
 ```java
 /**
  * 插值查找
  */
 public class InsertionSearch {
-
-
     /**
      * 用插值查找查找在 nums 数组中查找 key 的 index
      * 先用快排对数组进行排序，然后设定 begin = 0,end = length-1
@@ -139,7 +137,7 @@ length=500
 耗时：0ms
 ```
 
-## 参考文章
+## 4. 参考文章
 
 1. [查找算法总结-java版](https://blog.csdn.net/xushiyu1996818/article/details/90604118)
 
