知识点整理

--- a/DataStructure/数据结构/图/图.md
+++ b/DataStructure/数据结构/图/图.md
@@ -272,15 +272,53 @@ A->B,A<-B，A B(没有边相连接)，A->B A <- B
 
 ### 强连通分量
 
+　　下面是一张有向图和它的强连通分量。每一块引用块就是一个强连通分量。
 
+![](image/强连通分量.png)
 
+　　接下来就需要去寻找强连通分量了。在无向图中，计算连通分量仅仅是在 dfs 算法中加了区区几行代码就完美地解决了连通分量的问题。那么，在有向图中应该怎么做呢？
 
+　　在这里可以思考一下强连通性的规律，以及在调度问题中如何检测环的算法来解决这个问题。
 
+　　在这里有一个比较暴力的解决方法，对于某个节点 V，得到在有向图中 V 可以到达的顶点，然后进行遍历，得到可到达 V 的顶点。然后，取他们的交集。这样就可以得到连通分量了。但是显而易见，这样的事件复杂度是 0(n2)。找出可到达 V 的顶点的时间复杂度是 O(n2)，取并集的时间复杂度视数据结构而定，使用数组的话时间复杂度是 O(n^2)。
 
+　　众所周知，一般是不接受平方级别的时间复杂度的（比如说排序），而在无向图中，获得连通分量的时间复杂度仅仅为 O(n)，那么在有向图中间解法是否可以像无向图一样美妙呢？
+
+　　有一个算法叫做 Kosaraju，非常的简洁，先来了解这个算法的步骤，然后再来讨论它为什么要这样做？
+
+1. 将一幅图 G 进行反向也就是调用 reverse() 函数得到 G2。
+2. 将 G2 进行拓扑排序得到它的逆后续排序（也就是一个序列）。
+3. 然后对图进行深度优先搜索，进行深度搜索的顺序就是第 2 个步骤中的逆后序序列。
+4. 在构造函数中，使用同一个 dfs() 函数调用被访问的ing点都在同一个强连通分量中间。
+
+　　接下来是代码：
+
+```
+
+```
+
+　　上面边是寻找强连通分量的代码，接下来思考一些为什么能够达到这种效果。
+
+　　首先可以很简单的知道，每个和 s 强连通的顶点 v 都会在构造函数 dfs(graph,s) 被访问到。接下来需要思考的是，为什么构造函数中 dfs(graph,s) 函数所到达的任意顶点 v 都必然是和 s 强连通的。
+
+　　设 v 是 dfs(graph,s) 达到的某个顶点，那么原图 G 中必然会有一条 s 到 v 的路径，现在找到 v 到 s 的路径即可。等价于证明 G2 （G 通过 reverse() 函数得到）有一条 s 到 v 的路径。
+
+　　v 节点在阔普排序中会不会出现在 s 节点的前面？当然不会！！（如果出现在前面，在 dfs(graph,s) 中就会不会调用 dfs(graph,v)，因为 v 节点已经被标记了）。
+
+　　因此现在已经确定了 v 节点在 s 节点的后面，那么代表着什么呢？代表着在 G2 的深度优先遍历中，dfs(graph,v) 调用结束绝对在 dfs(graph,s) 之前调用（栈是先进后出），那么在图 G2 中就分为两种情况：
+
+1. dfs(graph,v) 在 dfs(graph,s) 调用之前结束
+2. dfs(graph,v) 在 dfs(graph,s) 调用结束之前结束
+
+　　因为在图 G 中有一条 s->v 的路径，在图 G2 中有一条 v->s 的理解，则第一种情况不可能出现。则第二种情况说明了 G2 中有一条 s->v 的路线，则图 G 中有一条 v->s 的路径。
+
+　　下面是一张过程始意图（左边是对 G2 进行逆后序排序，右边是根据排序的结果进行深度递归）。
+
+![](image/koaraju算法.png)
 
 ## 最小生成树（无向图）
 
-
+　　在说最小生成树之前，先来说说加权图。下图中便是一副加权无向图。加权图和图的区别在于它的每一条边都有一个权值，那么它有什么用呢？举个例子：
 
 
 
