--- a/DataStructure/数据结构/并查集.md
+++ b/DataStructure/数据结构/并查集.md
@@ -145,19 +145,76 @@
 
 　　上面基于 size 的优化方案，是节点数少的树往节点数多的树合并。
 
-　　但是节点数多不代表树的高度高，比如按照 size 的优化方案，执行 Union(2,5)
+　　但是节点数多不代表树的高度高，比如按照 size 的优化方案，执行 Union(2,5)，元素 2 所在的树总节点数为 4 个，但只有 2 层；元素 5 所在的树有 3 个节点，有 3 层。
 
+　　合并如下过程：
 
+![](image/基于rank优化1.png)
+
+　　这个时候可以使用 rank 来优化，rank 代表树的高度或深度。高度低的树向高度高的树合并。
+
+　　使用 rank 的优化方案，执行 Union(2,5)，如下的合并过程：
+
+![](image/基于rank优化2.png)
+
+　　实现代码如下：
+
+```
+
+```
+
+　　性能对比：
+
+```
+
+```
 
 ### 路径压缩优化
 
+　　路径压缩基于 rank 的基础上来做优化的。优化时机是在执行 find 操作的时候对其进行路径压缩。
 
+```
+
+```
+
+　　路径压缩的流程如下：
+
+![](image/路径压缩.png)
+
+　　性能对比如下：
+
+```
+
+```
+
+　　从一来是的 Quick Find 到 Quick Union 优化，然后从 Quick Union 到基于 size 的优化，然后从基于 size 优化到基于 rank 优化，到最后的路径压缩优化，整个并查集的实现和优化就介绍完毕。
 
 ## 并查集的时间复杂度
 
+　　在使用 Quick Union 版本的并查集使用树形结构来组织节点的关系。
 
+　　那么性能跟树的深度有关系，简称 O(h)，二叉搜索树的时间复杂度也是为 O(h)。
 
+　　但是并查集并不是一个二叉树，而是一个多叉树，所以并查集的查询和合并时间复杂度并不是 O(logn)。
 
+　　在加上 rank 和路径压缩优化后，并查集的时间复杂度为 O(log*n)。
+
+　　log*n 的数学定义：
+
+![](image/log星n的数学定义.png)
+
+　　log * n 叫做 Iterated logarithm，下面是 n 和 log * n 之间的关系：
+
+| n               | log*n |
+| --------------- | ----- |
+| (-∞,1]          | 0     |
+| (1,2]           | 1     |
+| (3,4]           | 2     |
+| (4,16]          | 3     |
+| (16,65536]      | 4     |
+| (65535,2^65536] | 5     |
+
+　　O(log n) 的时间复杂度已经很快了，O(Log*n) 是比 O(log n) 还要快，近似等于 O(1)，比 O(1) 慢一点。 
 
 ## 参考文章
 
