--- a/DataStructure/算法/查找算法/二叉树查找.md
+++ b/DataStructure/算法/查找算法/二叉树查找.md
@@ -1,8 +1,28 @@
 #  二叉树查找
 
-　　二叉树查找
+## 1. 二叉树查找的基本思想
 
-## 参考文章
+　　二叉查找树是先对待查找的数据进行生成树，确保树的左分支的值小于右分支的值，然后再进行和每个结点的父节点比较大小，查找最适合的范围。这个算法的查找效率很高，但是如果使用这种查找方法要首先创建树。
+
+　　二叉查找树（BinarySearch Tree，也叫二叉搜索树，或称二叉排序树 Binary Sort Tree）或者是一棵空树，或者是具有下列性质的二叉树：
+
+1. 若任意节点的左子树不空，则左子树上所有结点的值均小于它的根结点的值。
+2. 若任意节点的右子树不空，则右子树上所有节点的值均大于它的根节点的值。
+3. 任意节点的左、右子树叶分别为二叉查找树。
+
+　　二叉查找树性质：对二叉查找树进行中序遍历，即可得到有序的数列。
+
+　　根据二叉查找树的性质，可以从根根据大小比较，然后到左右孩子搜索到对应的节点。
+
+## 2. 二叉树查找的复杂度
+
+　　它和二分查找一样，插入和查找的时间复杂度均为 O(log2 n)，但是在最坏的情况下仍然会有 O(n) 的时间复杂度。原因在于插入和删除元素的时候，树没有保持平衡。为了追求的是在最坏的情况下仍然有较好的时间复杂度，引入了平衡查找树。
+
+## 3. 二叉树查找的代码
+
+　　二叉查找树的代码查看：[二分搜索树](https://github.com/ZhangMiao147/android_learning_notes/blob/master/DataStructure/数据结构/树/二分搜索树.md)
+
+## 4. 参考文章
 
 1. [查找算法总结-java版](https://blog.csdn.net/xushiyu1996818/article/details/90604118)
 
