--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -214,20 +214,21 @@
 
 7/16
 
-* Set 集合
-* 线性表
-* 插值查找 
+* Set 集合 - 已完成
+* 线性表链式存储
+* 插值查找  - 已完成
 
 7/17
 
 * 并查集
+* 线性表顺序存储
 * 查找算法知识
 
 7/18
 
 * 堆
 * 斐波那契查找
-* 二叉树查找
+* 二叉树查找 - 已完成
 
 7/19
 
@@ -277,6 +278,7 @@
 * 堆排序
 * 数据库
 * NIO
+* 适配
 
 ## 盘点需要做的事情（详细）
 
@@ -342,6 +344,7 @@
    * NIO
    * String
    * 动态代理类 Proxy
+   * PriorityQueue
    * ReentrantLock - 已完成
    * Condition - 已完成
    * ConcurrentHashMap - 已完成
